--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-HELP.md
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
@@ -18,6 +18,22 @@ target/
 *.iws
 *.iml
 *.ipr
+out/
+.idea/
+.metadata/
+.recommenders/
+.idea_modules/
+
+##############################
+## Java
+##############################
+.mtj.tmp/
+*.class
+*.jar
+*.war
+*.ear
+*.nar
+hs_err_pid*
 
 ### NetBeans ###
 /nbproject/private/
